--- a/frontend/src/main/web/src/index.html
+++ b/frontend/src/main/web/src/index.html
@@ -11,6 +11,7 @@
 
 <style type="text/css" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css"></style>
 <style type="text/css" src="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css"></style>
+<style type="text/css" src="https://cdn.jsdelivr.net/npm/bootstrap-social@5.1.1/bootstrap-social.css"></style>
 </head>
 <body>
 <app-root></app-root>
